# md2pages

./: .gitignore  AGENTS.md  README.md  pyproject.toml
md2pages/: __init__.py  __main__.py  cli.py  config.py  converter.py  generator.py  template.py  utils.py
md2pages/static/: style.css
md2pages/templates/: base.html  index.html
static/: script.js  style.css
templates/: index.html  page.html
tests/: test_config.py  test_utils.py
